# numerical_stuff_and_opengl

./: .#README.md  .gitattributes  .gitignore  CMakeLists.txt  README.html  README.md  TODO.html  TODO.md  doxygen_config_file  glad.c  pdfx.xmpi
benchmarks/: benchmarks.csv  benchmarks.json  benchmarks_includes.hpp  double_sort_benchmarks.csv  double_sort_benchmarks_analysis.nb  float_key_value_sort_benchmarks_analysis.nb  float_sort_benchmarks.csv  float_sort_benchmarks_analysis.nb  run_benchmarks.sh  sort_benchmarks.cpp  sort_benchmarks_analysis.nb  sort_double_benchmarks.cpp  sort_float_benchmarks.cpp
docs/: acos_asin.nb  intrinsics_notes.tex  pdfx.xmpi  trigonometric_functions.tex
examples/: opengl_test.hpp
examples/ising/: CMakeLists.txt  drawing_functions.cpp  imgui_impl_opengl3.cpp  ising.cpp  ising_shader.hpp  ising_windows.cpp  ising_windows.hpp  spin_array.hpp  text_rendering.hpp
examples/ising_qt/: CMakeLists.txt  ising.cpp  ising_shader.hpp  ising_windows.cpp  ising_windows.hpp  spin_array.hpp
examples/ising_simple_test/: CMakeLists.txt  ising.cpp
examples/ising_simple_test/data/: analisys.nb
examples/molecular_simulation/: CMakeLists.txt  analysis.nb  main.cpp  molecular_dynamics.cpp  molecular_dynamics_simulation_var_particle_number.nb  monte_carlo_analysis.nb  phase_diagram.cpp
geometrical_objects/: .#sphere.hpp  CMakeLists.txt  auxiliary_functions.hpp  circle.hpp  opengl_test.hpp  shape.hpp  sphere.hpp
geometrical_objects/auto/: Cos_and_sin_approximations.el
geometrical_objects/docs/: .#Cos_and_sin_approximations.tex  Cos_and_sin_approximations.tex  intrinsics_notes.tex  pdfx.xmpi  trigonometric_functions.tex
geometrical_objects/docs/auto/: Cos_and_sin_approximations.el
geometrical_objects/docs/html/: CMakeCCompilerId_8c.html  annotated.html  auxiliary__functions_8hpp.html  auxiliary__functions_8hpp_source.html  auxiliary__functions__test_8cpp.html  box_8hpp.html  box_8hpp_source.html  check__shaders_8cpp.html  check__shaders_8hpp.html  circle_8hpp.html  circle_8hpp_source.html  classA.html  classBox-members.html  classBox.html  classCircle-members.html  classCircle.html  classDisk-members.html  classDisk.html  classRectangle-members.html  classRectangle.html  classShader-members.html  classShader.html  classShape-members.html  classShape.html  classShape2D-members.html  classShape2D.html  classShape3D-members.html  classShape3D.html  classSphere-members.html  classSphere.html  classStar.html  classes.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_64f94c193e4d03baf6e89b1053934749.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9e83a4ac7f7d1a8a7c3c52bda66290e4.html  dir_bd9a190fd8c02d7b9c3c0633dce739aa.html  disk_8hpp.html  disk_8hpp_source.html  display__functions_8cpp.html  (+56 more)
geometrical_objects/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_4.js  defines_0.js  defines_4.js  defines_6.js  enums_0.js  enumvalues_0.js  files_0.js  files_2.js  files_3.js  files_5.js  files_6.js  files_8.js  files_9.js  files_a.js  functions_0.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_a.js  functions_b.js  functions_d.js  functions_e.js  functions_f.js  (+9 more)
geometrical_objects/docs/latex/: CMakeCXXCompilerId_8cpp.tex  annotated.tex  auxiliary__functions_8hpp.tex  auxiliary__functions__test_8cpp.tex  box_8hpp.tex  check__shaders_8hpp.tex  circle_8hpp.tex  classA.tex  classBox.eps  classBox.tex  classCircle.eps  classCircle.tex  classDisk.tex  classRectangle.eps  classRectangle.tex  classShader.tex  classShape.eps  classShape.tex  classShape2D.eps  classShape2D.tex  classShape3D.eps  classShape3D.tex  classSphere.tex  classStar.tex  classThis.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  dir_64f94c193e4d03baf6e89b1053934749.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_9e83a4ac7f7d1a8a7c3c52bda66290e4.tex  dir_bd9a190fd8c02d7b9c3c0633dce739aa.tex  display__functions_8cpp.tex  display__functions_8hpp.tex  drawing__functions_8hpp.tex  files.tex  gtest__auxiliary__functions_8hpp.tex  gtest__tests_8cpp.tex  hierarchy.tex  namespaces.tex  namespaceshaders.tex  namespacestd.tex  (+15 more)
geometrical_objects/other/: tangens_and_arctangens.nb
geometrical_objects/src/: .#circle.hpp  .#drawing_functions.hpp  .#sphere.hpp  auxiliary_functions.hpp  binary_tree.hpp  box.hpp  check_shaders.hpp  circle.hpp  convex_hull.hpp  disk.hpp  display_functions.cpp  display_functions.hpp  drawing_functions.cpp  drawing_functions.hpp  opengl_test.cpp  opengl_test.hpp  print_functions.hpp  ractangle.hpp  rectangle.hpp  render.hpp  shader_class.hpp  shaders.hpp  shape.hpp  sort.hpp  sphere.hpp  star.hpp  star3d.hpp  type_definitions.hpp
geometrical_objects/testing/: auxiliary_functions_test.cpp  auxliary_functions_test.cpp  convex_hull_test.hpp  gtest_auxiliary_functions.hpp  gtest_tests.cpp  shape_test.hpp  sort_test.hpp  standard_includes.hpp  test_includes.hpp
geometrical_objects/testing/data/: chebyshev_plots.nb  factorials_check.nb
geometrical_objects/testing/data/mathematica_notebooks/: cos_sin_chebyshev.nb
other/: discretized_numbers.nb  tangens_and_arctangens.nb
program1/: .#CMakeLists.txt  .#shaders.hpp  CMakeLists.txt  functions.cpp  opengl_test.cpp  opengl_test.hpp  print_functions.hpp  shaders.hpp  sphere_generation.cpp  test_shader.glsl
program2/: opengl_test.cpp  opengl_test.hpp  print_functions.hpp  sphere_generation.cpp
sphere/: .#Shapes.hpp  .#opengl_test.hpp  .#sphere_generation.hpp  CMakeLists.txt  auxiliary_functions.hpp  check_shaders.cpp  functions.cpp  opengl_test.cpp  opengl_test.hpp  print_functions.hpp  shaders.hpp  sphere.cpp  sphere.hpp  sphere_generation.cpp  sphere_generation.hpp
src/: box.hpp  display_functions.cpp  drawing_functions.hpp  print_functions.hpp  shader_class.cpp  shaders.hpp  star.hpp  star3d.hpp  type_definitions.hpp
testing/: auxiliary_functions_data.cpp  auxiliary_functions_test.cpp  auxiliary_functions_test.hpp  bitonic_sort_int_tests.hpp  (+14 more)
(+977 files in other folders)
